# fastsearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/corpus/: technical_corpus.txt
data/: s1.txt  s2.txt  s3.txt  s4.txt  s5.txt
frontend/: app.js  index.html  styles.css
src/: BM25Ranker.cpp  BenchmarkRunner.cpp  ForwardIndex.cpp  main.cpp
